# GameScriptLib

./: .gitignore  CMakeLists.txt  README.md  cpp.hint
.github/workflows/: cmake-single-platform.yml
doc/app/e7/: README.md
doc/ncnn/: README.md
doc/screenshot/: README.md
include/project/app/epic7/: database.h
include/project/control/: controller.h
include/project/inject/: frame_info.h  injector.h  mutex.h  semaphore.h  shared_memory.h  shm_data.h
include/project/net/: cus_process.h  json.h  ncnn_infer.h  onnx_infer.h  process.h
include/project/screenshot/: capture_gl.h  hook.h  ipcrw.h  screenshot.h
include/project/win/: win.h
src/: CMakeLists.txt
src/app/epic7/assert/: hero_avatar.onnx  hero_avatar.pt  hero_avatar_feature-sim-opt.param  hero_avatar_feature-sim-opt.table  hero_avatar_feature.json  hero_avatar_feature.onnx  hero_avatar_feature_int8.param  id2name.txt  imagelist.txt  ncnn_table.ps1  rta_cls.pt
src/app/epic7/src/: database.cpp  equipment.cpp
src/app/epic7/tools/: download_ytb.ipynb  get_avatar.ipynb  hero_avatar.onnx  hero_avatar.pt  split_video.ipynb  train_hero.ipynb
src/app/epic7/tools/.ipynb_checkpoints/: get_avatar-checkpoint.ipynb  split_video-checkpoint.ipynb  train_hero-checkpoint.ipynb  train_rta_cls-checkpoint.ipynb
src/inject/: CMakeLists.txt  DirectX11.cpp  HelloWorld.cpp  OpenGLScreenShot.cpp  injector.cpp  mouse_message.cpp
src/lisener/: mouse_message.cpp
src/net/: ncnn_infer.cpp  onnx_infer.cpp
src/screenshot/: capture_gl.cpp  screenshot.cpp
src/win/: win.cpp
tests/: CMakeLists.txt
tests/app/: CMakeLists.txt
tests/app/epic7/: CMakeLists.txt  test_all.cpp  test_controller.cpp  test_net.cpp  test_record.cpp
tests/inject/: CMakeLists.txt  test_inject.cpp
tests/log/: CMakeLists.txt  test_log.cpp
tests/screenshot/: CMakeLists.txt  test_screenshot.cpp
